# loki-mode

./: .gitignore  .npmignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER_README.md  Dockerfile  Dockerfile.sandbox  LICENSE  LICENSE-CHANGE-NOTICE.md  README.md  SKILL.md  TODO.md  VERSION  docker-compose.yml  index.html  package.json
.loki/: CONTINUITY.md
agent-skills/: README.md
api/: README.md  server.js  server.ts  test.js
autonomy/: CONSTITUTION.md  README.md  api-server.js  app-runner.sh  bmad-adapter.py  completion-council.sh  config.example.yaml  council-v2.sh  forge_detector.sh  grill.sh  issue-parser.sh  issue-providers.sh  loki  mcp-launch.sh  mirofish-adapter.py  notification-checker.py  openspec-adapter.py  pick.py  prd-analyzer.py  prd-checklist.sh  quickstart.sh  run.sh  sandbox.sh  serve.sh  spec-interrogation.sh  spec.sh  telemetry.sh  tui.sh  verify.sh  whispr-flow.sh
benchmarks/: prepare-submission.sh  run-benchmarks.sh  tree_retrieval_benchmark.py
blog/: README.md  benchmarks.html  index.html
completions/: _loki  loki.bash
coverage/: clover.xml
dashboard/: Dockerfile  __init__.py  activity_logger.py  api_keys.py  api_v2.py  audit.py  auth.py  control.py  docker-compose.yml  failure_extractor.py  forge_router.py  migration_engine.py  models.py  prompt_optimizer.py  registry.py  rigour_integration.py  runs.py  server.py  tenants.py
dashboard-ui/: index.html  index.js  package.json  playwright.config.js
demo/: README.md  record-demo.sh  record-full-demo.sh  run-demo-auto.sh  run-demo.sh  vhs-tape.tape  voice-over-script.md
docs/: ACKNOWLEDGEMENTS.md  COMPARISON.md  (+13 more)
sdk/python/: README.md  pyproject.toml
sdk/python/autonomi/: __init__.py
sdk/python/tests/: test_client.py
(+904 files in other folders)
