[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autonomi"
version = "0.1.0"
description = "Python SDK for Loki Mode Control Plane API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["autonomi*"]
